feat: InputView 예외 추가
Console.readLine() 은 입력값을 찾을 수 없는 경우 또는 "" 인 경우 NoSuchElementException 예외를 내보낸다.
(?): 테스트 코드에서는 그렇지만, 실제로는 뱉지를 않는거 같다. System.in 내부에서 잡아주는건가? 내부 코드를 보긴 했는데 해석하기가 어렵다.